# claude-resume-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  resume-extractor.skill  resume-formatter.skill  resume-optimizer.skill  resume-reviewer.skill  resume-state.skill  resume-template-maker.skill
.claude-plugin/: marketplace.json
.claude/skills/: resume-extractor  resume-formatter  resume-optimizer  resume-reviewer  resume-state  resume-template-maker
docs/: error_handling.md  typst-investigation.md
resume-coach/: SKILL.md
resume-coach/references/: coaching_questions.md  industry_prompts.md  metrics_guide.md  star_templates.md
resume-coach/scripts/: coach_session.py
resume-coverletter/: SKILL.md
resume-coverletter/references/: cover_letter_best_practices.md
resume-coverletter/scripts/: compile_cover_letter.py  generate_cover_letter.py
resume-extractor/: SKILL.md
resume-extractor/references/: extraction_prompts.md  resume_schema.yaml
resume-extractor/scripts/: extract_pdf.py  schema.py
resume-formatter/: SKILL.md
resume-formatter/references/: examples.md  theme_guide.md  troubleshooting.md
resume-formatter/scripts/: compile_latex.py  compile_typst.py  yaml_to_latex.py  yaml_to_typst.py
resume-optimizer/: SKILL.md
resume-optimizer/references/: action_verbs.yaml  ats_guidelines.md  examples.md  general-optimization.md  impact_patterns.md  job-tailoring.md
resume-optimizer/scripts/: fetch_job_posting.py  validate_yaml.py
resume-reviewer/: SKILL.md
resume-state/: SKILL.md
resume-template-maker/: SKILL.md
resume_cli/: __init__.py  __main__.py  cli.py
scripts/: package_skills.py
src/resume_cli/: __init__.py  (+1 more)
tests/: test_cli.py  test_state_utils.py  test_yaml_to_typst.py
(+59 files in other folders)
