[project]
name = "resume-helper"
version = "1.2.0"
description = "Resume management skills suite: extract, optimize, format, review, and create custom templates"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "jinja2",
    "pdfplumber",
    "python-docx",
    "pyyaml",
    "requests",
]
