[project]
name = "resume-helper"
version = "1.5.0"
description = "Resume management skills suite: extract, coach, optimize, format, review, and create custom templates"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "jinja2",
    "pdfplumber",
    "pydantic>=2.0",
    "python-docx",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
resume = "resume_cli.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["resume_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
